tests/lean/1240.lean.expected.out
1240.lean:4:0-4:5: error: import failed, trying to import module with anonymous name
